# mondrian-calendar

./: .gitignore  README.md  main.py  makefile  pyproject.toml
reterminal_daemon/: __init__.py  daemon.py  template.html
scripts/: build_pex.sh
systemd/: .gitignore  reterminal-daemon.env.example  reterminal-daemon.service
