[build-system]
requires = ["flit_core>=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reterminal-daemon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"google-api-python-client>=2.177.0",
	"google-auth-oauthlib>=1.2.2",
	"bleak>=1.1.0",
	"jinja2>=3.1.4",
	"py-opendisplay>=7.13.1",
	"rich>=15.0.0",
]

[project.optional-dependencies]
build = [
	"pex>=2.61.0",
]

[project.scripts]
reterminal-daemon = "reterminal_daemon.daemon:main"

[tool.flit.module]
name = "reterminal_daemon"

